--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,11 +52,15 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev
+        # Create pkg-config symlink for webkit2gtk-4.0 to 4.1
+        sudo ln -sf /usr/lib/x86_64-linux-gnu/pkgconfig/webkit2gtk-4.1.pc /usr/lib/x86_64-linux-gnu/pkgconfig/webkit2gtk-4.0.pc 2>/dev/null || true
     
     - name: Install ARM64 cross-compilation tools (Ubuntu ARM64)
       if: runner.os == 'Linux' && matrix.platform == 'linux/arm64'
       run: |
-        sudo apt-get install -y gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu pkg-config-aarch64-linux-gnu
+        sudo apt-get install -y gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu pkg-config-aarch64-linux-gnu libgtk-3-dev:arm64 libwebkit2gtk-4.1-dev:arm64 2>/dev/null || true
+        # Create pkg-config symlink for ARM64
+        sudo ln -sf /usr/lib/aarch64-linux-gnu/pkgconfig/webkit2gtk-4.1.pc /usr/lib/aarch64-linux-gnu/pkgconfig/webkit2gtk-4.0.pc 2>/dev/null || true
     
     - name: Build (Linux x86-64)
       if: matrix.platform == 'linux/amd64'
